<resources>
    <string name="app_name">Politeknik Negeri Lampung</string>
    <string name="descpolinela1">Dalam rangka memenuhi kebutuhan tenaga terampil dan profesional di bidang pertanian, Pemerintah Indonesia membuka sistem pendidikan baru yang berbentuk Politeknik Pertanian. Politeknik Pertanian Negeri di Propinsi Lampung ini resmi terbentuk dengan diterbitkannya SK. Dirjen Dikti Depdikbud No.14/Dikti/Kep/1984, tanggal 7 April 1984 tentang Pembentukan Politeknik Pertanian Universitas Lampung. Kemudian dalam rangka mempersiapkan pengembangan Politeknik Pertanian, yang meliputi pengembangan fisik kampus, tenaga pengajar, dan pengembangan kurikulum, maka pada tanggal 3 Desember 1985, melalui SK. Dirjen Dikti Depdikbud No.79/Dikti/Kep/1985, dibentuk Penanggung Jawab Unit Pelaksana Proyek pada Proyek Pengembangan Pendidikan Politeknik Pertanian Universitas Lampung.</string>
    <string name="descpolinela2">Pada tanggal 3 Nopember 1988 Politeknik Pertanian Universitas Lampung menempati kampus baru di Jalan Soekarno-Hatta, Rajabasa, Bandar Lampung, dan pada tanggal 15 Desember 1988 Penanggungjawab Pengembangan Politeknik Pertanian Negeri Lampung dilantik oleh Rektor Universitas Lampung. Pada tanggal 7 April 2001, berdasarkan SK. Mendiknas RI No. 036/O/2001 tentang Pendirian Politeknik Pertanian Negeri Bandar Lampung, Politeknik Pertanian Negeri Lampung resmi mandiri menjadi salah satu bentuk Perguruan Tinggi Negeri (PTN) di Propinsi Lampung dengan nama Politeknik Pertanian Negeri Bandar Lampung.</string>
    <string name="descpolinela3">Berdasarkan rapat Senat Politeknik tanggal 19 Oktober 2002 telah ditetapkan perubahan nama Politeknik menjadi Politeknik Negeri Lampung. Pertimbangan perubahan nama tersebut merupakan rencana pengembangan Politeknik di masa mendatang agar memperluas bidang studi yang dapat dilaksanakan dan dibutuhkan masyarakat, misalnya bidang studi ekonomi secara umum, keteknikan, manajemen dan sebagainya.</string>
    <string name="pangan">Budidaya Tanaman Pangan</string>
    <string name="kebun">Budidaya Tanaman Perkebunan</string>
    <string name="tani">Teknologi Pertanian</string>
    <string name="ekbis">Ekonomi dan Bisnis</string>
    <string name="ternak">Peternakan</string>
    <string name="jurusan">JURUSAN</string>
    <string name="daftar">Daftar Jurusan Politeknik Negeri Lampung</string>
    <string name="desPangan">Budidaya Tanaman Pangan adalah jurusan yang menyelenggarakan pendidikan vokasi, penelitian dan pengabdian masyarakat di bidang budidaya tanaman pangan.</string>
    <string name="visi_pangan">"Penghasil tenaga ahli profesional terampil dan inovatif dalam menunjang peningkatan produksi pangan, pembenihan tanaman dan agribisnis hortikultura melalui pengajaran yang berkualitas, penelitian terapan serta pengabdian masyarakat"</string>
    <string name="misi_pangan1">1.Komitmen pada pendidikan dan pengajaran berkualitas untuk menghasilkan lulusan terbaik yang dapat mendukung upaya peningkatan produksi pangan dan benih nasional serta mampu mengembangkan bisnis hortikultura dan teknologi kultur jaringan.</string>
    <string name="misi_pangan2">2.Mengimplementasikan penelitian terapan dan pengabdian kepada masyarakat dalam bidang teknologi produksi tanaman pangan, benih serta produksi tanaman hortikultura dan kultur jaringan guna mendukung pencapaian ketahanan pangan nasional.</string>
    <string name="desKebun">Jurusan Budidaya Tanaman Perkebunan adalah jurusan yang menyelenggarakan pendidikan vokasi, penelitian dan pengabdian masyarakat di bidang industri perkebunan</string>
    <string name="visi_kebun">"Menjadi jurusan yang bermutu, inovatif dan unggul dalam ilmu pengetahuan dan teknologi terapan di bidang perkebunan yang dapat bersaing di era industri 4.0"</string>
    <string name="misi_kebun1">1. Menyelenggarakan pendidikan yang berorientasi pada akhlak mulia disiplin, terampil dan mandiri</string>
    <string name="misi_kebun2">2. Melaksanakan kegiatan keilmuan dan penelitian terapan sebagai penunjang pendidikan dan pengajaran dibidang perkebunan</string>
    <string name="misi_kebun3">3. Melaksanakan kegiatan pengabdian kepada masyarakat melalui kolaborasi dengan masyarakat dalam membagikan ilmu terapan berbasis perkebunan</string>
    <string name="misi_kebun4">4. Menguatkan budaya organisasi yang berkarakter, beretika dan professional</string>
    <string name="misi_kebun5">5. Melaksanakan kerjasama secara berkesinambungan dengan mitra dunia usaha dan industri khususnya dibidang perkebunan</string>
    <string name="desTani">Teknologi Pertanian adalah jurusan yang menyelenggarakan pendidikan vokasi, penelitian dan pengabdian masyarakat di bidang teknologi pertanian dan teknologi rekayasa.</string>
    <string name="visi_tani">Menjadi Jurusan Teknologi Pertanian Yang Bermutu, Unggul dan Inovatif Pada Bidang Teknologi dan Rekayasa Pertanian.</string>
    <string name="misi_tani1">1. Menyelenggarakan Pendidikan Tinggi Vokasi yang berorientasi pada ahklak mulia, terampil, disiplin, mandiri, dan kompetitif.</string>
    <string name="misi_tani2">2. Melaksanakan penelitian terapan untuk menopang pendidikan dan transfer IPTEKS guna meningkatkan kualitas kehidupan masyarakat.</string>
    <string name="misi_tani3">3. Meningkatkan pengabdian kepada masyarakat atas dasar tanggung jawab sosial demi kepentingan masyarakat.</string>
    <string name="misi_tani4">4. Menguatkan budaya akademik, organisasi kerja yang berkarakter dan beretika.</string>
    <string name="misi_tani5">5. Mengembangkan organisasi yang sehat dengan manajemen yang  transparan.</string>
    <string name="desTernak">Jurusan Peternakan adalah jurusan yang menyelenggarakan pendidikan vokasi, penelitian dan pengabdian pada masyarakat di bidang peternakan dan perikanan.</string>
    <string name="visi_ternak">Menjadi pusat pendidikan tenaga profesional dalam pengembangan teknologi peternakan menuju terwujudnya peternakan modern, tangguh dan efisien.</string>
    <string name="misi_ternak">Menyelenggarakan pendidikan, penelitian terapan dan pengabdian kepada masyarakat dalam men-dayagunakan keunggulan sumberdaya peternakan wilayah melalui penerapan teknologi tepat guna.</string>
    <string name="desEkbis">Ekonomi dan Bisnis adalah jurusan yang menyelenggarakan pendidikan vokasi, penelitian dan pengabdian pada masyarakat di bidang Agribisnis, akuntansi, perpajakan, informatika dan pariwisata.</string>
    <string name="visi_ekbis">Penghasil tenaga profesional dan berkompeten di bidang agribisnis, akuntansi, perpajakan, informatika dan pariwisata yang dapat bersaing di era globalisasi.</string>
    <string name="desPMIP">Program Studi Produksi dan Manajemen Industri Perkebunan (PS PMIP) adalah program studi jenjang S1-Terapan yang didirikan pada tahun 2009 dengan ijin penyelenggaraan dengan SK Kemendiknas No: 969/D/T/2008 dan secara formal kuliah pertama dimulai pada tanggal 30 Agustus 2009. PS PMIP telah terakreditasi oleh BANPT dengan peringkat akreditasi “B”. PS PMIP merupakan salah satu program studi di bawah pengelolaan Jurusan Budidaya Tanaman Perkebunan, Politeknik Negeri Lampung. PS PMIP sebagai bagian dari Politeknik Negeri Lampung selalu berusaha menunjang kegiatan perekonomian Lampung yang berbasis industri pertanian. Dalam menjawab tantangan global, PS PMIP mempunyai komitmen untuk mengembangkan tenaga ahli terapan dengan basis agroindustri yang diperkuat oleh pengembangan kemampuan pengalaman industri pertanian dan jiwa kewirausahawan serta ditunjang dengan kurikulum berbasis kompetensi.</string>
    <string name="visiPMIP">Menjadi program studi yang bermutu, inovatif, dan unggul dalam menghasilkan sumberdaya manusia dengan kompetensi produksi dan manajemen industri perkebunan yang dapat bersaing nasional</string>
    <string name="misiPMIP1">1.	Menyelenggarakan pendidikan tinggi vokasi yang berorientasi pada akhlak mulia, terampil, disiplin, mandiri, dan kompetitif berbasis produksi dan manajemen industri perkebunan.</string>
    <string name="misiPMIP2">2.	Melaksanakan kajian keilmuan dan penelitian terapan untuk menopang pendidikan dan pengajaran berbasis produksi dan manajemen industri perkebunan.</string>
    <string name="misiPMIP3">3.	Melaksanakan pengabdian kepada masyarakat melalui transfer ilmu pengetahuan dan teknologi terapan pada bidang produksi dan manajemen industri perkebunan.</string>
    <string name="misiPMIP4">4.	Menguatkan budaya akademik, organisasi, dan kerja yang berkarakter, dan beretika.</string>
    <string name="misiPMIP5">5.	Melaksanakan kerjasama bidang produksi dan manajemen industri perkebunandengan stakeholders. </string>
    <string name="desTSLL">Program Studi Teknik Sumberdaya Lahan dan Lingkungan (Prodi TSL) adalah program studi D3 vokasi yang mempelajari, mengembangkan dan mengaplikasikan interdisiplin ilmu geomatika, sumberdaya air dan lingkungan. Prodi TSL bertugas mengembangkan potensi peserta didik agar memiliki kompetensi pengetahuan, ketrampilan dan sikap yang sesuai dengan kebutuhan industri dan dunia kerja di bidang geomatika, keteknikan sumberdaya air dan lingkungan, serta menjadi manusia yang beriman dan bertakwa kepada Tuhan yang Maha Esa, berakhlak mulia, sehat, berilmu, cakap, kreatif, mandiri dan menjadi warga negara yang demokratis serta bertanggungjawab.</string>
    <string name="visiTSLL">Menjadi Program Studi Yang Bermutu, Unggul dan Berkarya Inovatif Pada Bidang Keteknikan Sumberdaya Air dan Lingkungan</string>
    <string name="misiTSLL1">1.	Mendidik peserta didik agar kompeten dan profesional di bidang geomatika, keteknikan sumberdaya air dan lingkungan sesuai dengan industri dan dunia kerja</string>
    <string name="misiTSLL2">2.	Mengadakan penelitian dibidang geomatika, suberdaya air dan lingkungan untuk menghasilkan paket teknologi tepat guna bagi pengelolaan sumberdaya air dan lingkungan</string>
    <string name="misiTSLL3">3.	Menyelenggarakan pengabdian masyarakat di bidang geomatika, sumberdaya air dan lingkungan</string>
    <string name="misiTSLL4">4.	Menjalin kerjasama secara berkelanjutan dengan stakeholders dibidang geomatika, sumberdaya air dan lingkungan</string>
    <string name="misiTSLL5">5.	Menyelenggarakan pengelolaan program studi yang akuntabel dan transparan berbasis teknologi informasi</string>
    <string name="visiP_Agri1">1. Terintegrasi diartikan sebagai sebuah sistem agribisnis yang diintegrasikan antara praktik produksi tanaman, ikan, dan hewan menggunakan prinsip ekologi dan sosial ekonomi.</string>
    <string name="visiP_Agri2">2. Berkarakter kewirausahaan diartikan memiliki ciri khas seorang wirausaha/entrepreneur yaitu jujur, berintegritas, melaksanakan etika bisnis, dan mampu membuat lapangan kerja.</string>
    <string name="visiP_Agri3">3. Unggul diartikan mempunyai kemampuan lebih di bidang Pengelolaan Agribisnis (Agribusiness Management) dan memiliki hasil akreditasi A.</string>
    <string name="misiiP_Agri1">1. Mewujudkan pendidikan vokasi bidang Pengelolaan Agribisnis (Agribusiness Management) yang berkelanjutan, berorientasi kepada integritas, kejujuran, terampil, disiplin, dan mandiri.</string>
    <string name="misiiP_Agri2">2. Mewujudkan penelitian terapan dan pengabdian masyarakat dalam bidang Pengelolaan Agribisnis (Agribusiness Management) yang berkelanjutan guna meningkatkan kualitas sumberdaya manusia dan perbaikan kehidupan sosial ekonomi masyarakat.</string>
    <string name="misiiP_Agri3">3. Membentuk peserta didik menjadi masyarakat ilmiah yang produktif, kritis, kreatif dan inovatif, serta berorientasi wirausaha untuk menciptakan lapangan pekerjaan.</string>
    <string name="misiiP_Agri4">4. Membuka, mengembangkan, dan memperkuat kerjasama dengan dunia usaha-dunia industri, instansi pemerintah, dan masyarakat pertanian menuju SDG (Sustainable Development Goals).</string>
</resources>